--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "xml": "~1.0.0",
     "lodash": "~2.4.1",
     "request": "~2.50.0",
-    "bluebird": "~2.3.11"
+    "bluebird": "~2.3.11",
+    "json2xml": "~0.1.1"
   }
 }
